--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 openai==1.14.0
-anthropic==0.18.1
-google-generativeai==0.3.2
+# anthropic==0.18.1
+# google-generativeai==0.3.2
+groq==0.9.0
 python-dotenv==1.0.1
 termcolor==2.4.0
