--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,27 @@
 # API Keys
-OPENROUTER_API_KEY="your_openrouter_api_key_here"
+OPENROUTER_API_KEY=""
 
 # "HTTP_REFERRER" and "X-Title"
 HTTP_REFERER="linktr.ee/mindrocket"
 X_TITLE="MOA-DeepOutputs"
 
-# Agent Models
-AGENT1_MODEL="meta-llama/llama-4-maverick"
-AGENT2_MODEL="qwen/qwq-32b"
-AGENT3_MODEL="google/gemini-2.0-flash-001"
+# Symbolic Model Mapping
+AGENT1_MODEL_SYMBOLIC="meta-llama/llama-4-maverick"
+AGENT2_MODEL_SYMBOLIC="openai/o3"
+AGENT3_MODEL_SYMBOLIC="google/gemini-2.0-flash-001"
+SYNTHESIS_AGENT_MODEL_SYMBOLIC="google/gemini-2.0-flash-001"
+DEVILS_ADVOCATE_AGENT_MODEL_SYMBOLIC="openai/o3"
+FINAL_AGENT_MODEL_SYMBOLIC="anthropic/claude-3.5-haiku"
+
+# Agent Models (use symbolic indirection)
+AGENT1_MODEL="AGENT1_MODEL_SYMBOLIC"
+AGENT2_MODEL="AGENT2_MODEL_SYMBOLIC"
+AGENT3_MODEL="AGENT3_MODEL_SYMBOLIC"
+SYNTHESIS_AGENT_MODEL="SYNTHESIS_AGENT_MODEL_SYMBOLIC"
+DEVILS_ADVOCATE_AGENT_MODEL="DEVILS_ADVOCATE_AGENT_MODEL_SYMBOLIC"
+FINAL_AGENT_MODEL="FINAL_AGENT_MODEL_SYMBOLIC"
 
 # Special Agent Models
-SYNTHESIS_AGENT_MODEL="google/gemini-2.0-flash-001"
-DEVILS_ADVOCATE_AGENT_MODEL="deepseek/deepseek-r1-distill-qwen-32b"
-FINAL_AGENT_MODEL="google/gemini-2.5-pro-preview-03-25"
-
-#Number of Layers
 MOA_NUM_LAYERS=2
 
 # Provider Routing Configuration
