--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ HTTP_REFERER="linktr.ee/mindrocket"
 X_TITLE="MOA-DeepOutputs"
 
 # Symbolic Model Mapping
+DEEP_RESEARCH_AGENT_MODEL_SYMBOLIC="perplexity/sonar-deep-research"
 AGENT1_MODEL_SYMBOLIC="meta-llama/llama-4-maverick"
 AGENT2_MODEL_SYMBOLIC="openai/o3"
 AGENT3_MODEL_SYMBOLIC="google/gemini-2.0-flash-001"
@@ -22,7 +23,7 @@ DEVILS_ADVOCATE_AGENT_MODEL="DEVILS_ADVOCATE_AGENT_MODEL_SYMBOLIC"
 FINAL_AGENT_MODEL="FINAL_AGENT_MODEL_SYMBOLIC"
 
 # Special Agent Models
-MOA_NUM_LAYERS=2
+MOA_NUM_LAYERS=1
 
 # Provider Routing Configuration
 DEVILS_ADVOCATE_PRIMARY_PROVIDER="groq"
